--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Secure Login</title>
-    <link rel="shortcut icon" href="FAVICON.png" type="image/x-icon">
+    <link rel="shortcut icon" href="SmartRide.png" type="image/x-icon">
 
     <style>
                 :root {
