--- a/signup.html
+++ b/signup.html
@@ -115,7 +115,7 @@ select.error {
 button {
     width: 100%;
     padding: 14px;
-    background-color: var(--primary);
+    background-color: var(--secondary);
     color: #fff;
     border: none;
     border-radius: 6px;
