--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         button {
             width: 100%;
             padding: 14px;
-            background-color: var(--primary);
+            background-color: var(--secondary);
             color: white;
             border: none;
             border-radius: 4px;
