--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         }
         
         button:hover {
-            background-color: var(--primary-dark);
+            transform: translateY(-2px);
         }
         
         .divider {
