--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@ loginForm.addEventListener('submit', (e) => {
   localStorage.setItem("currentUser", JSON.stringify(user));
 
   // Redirect to home
-  window.location.href = `home.html?username=${user.username}`;
+  window.location.href = `homepage.html?username=${user.username}`;
 });
 </script>
 
